# rbc_main_zephyr

./: CMakeLists.txt  RBC2026_MAINBOARD_OK.ioc  README.md  main_pid_board.c  prj.conf  project_walkthrough.md
boards/rbc_mainboard/: Kconfig.rbc_mainboard  board.cmake  board.yml  rbc_mainboard.dts  rbc_mainboard.yaml  rbc_mainboard_defconfig
code_cu/: ILI9341.c  LOGO.c  main.c  main_taydk.c  pca9685.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/: bno055.c  bno055_zephyr.c  bno055_zephyr.h  main.c  pca9685.h  pca9685_zephyr.c
